# Discord-bot

./: .dockerignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.ghcr.yml  docker-compose.yml
.github/workflows/: docker-publish.yml
src/: main.rs
