[package]
name = "kobi-kendo-discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
shuttle-serenity = { version = "0.35.0", default-features = false, features = ["serenity-0-12-rustls_backend"] }
shuttle-runtime = "0.35.0"
serenity = { version = "0.12.0", features = ["cache"] } 
shuttle-secrets = "0.35.0"
tokio = "1.26.0"
tracing = "0.1.37"
