[package]
name = "kobi-kendo-discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
serenity = { version = "0.12.4", features = ["cache", "client", "gateway", "rustls_backend"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.41"
tracing-subscriber = "0.3"
dotenvy = "0.15.7"
